Fix flexbox width overflow issues

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,9 @@
 $primary: variables.$primary;
 $secondary: variables.$secondary;
 
+* {
+  box-sizing: border-box;
+}
 
 @import "bootstrap/bootstrap.scss";
 
